--- a/templates/character-sheet.hbs
+++ b/templates/character-sheet.hbs
@@ -40,7 +40,7 @@
           <ol class="inventory-list items-list condensed-inventory-list">
             <li class="items-header flexrow">
               <h3 class="item-name flexrow">{{localize "DND5E.ActionPl"}}</h3>
-              <div class="item-detail">{{localize 'OGL5E.HitDC'}}</div>
+              <div class="item-detail">{{localize 'SPELL_BETTER.HitDC'}}</div>
               <div class="item-detail item-damage">{{localize "DND5E.Damage"}}</div>
             </li>
 
