--- a/templates/categoryDialog.hbs
+++ b/templates/categoryDialog.hbs
@@ -1,14 +1,24 @@
-<dl class="inv-plus-dialog">
-    <dt>Category Name: </dt>
-    <dd><input name="label" type="text" value="{{label}}"></dd>
-    <dt title="Stops any item from being droped into the category if the combined itemweigth would be increased past this number.">Max Weight: </dt>
-    <dd title="Stops any item from being droped into the category if the combined itemweigth would be increased past this number.">
-        <input name="maxWeight" type="text" data-dType="Number" value="{{maxWeight}}"></dd>
-    <dt title="If set to any number above 0, the total weight carried will be increased by that ammount.">Inherent Weight: </dt>
-    <dd title="If set to any number above 0, the total weight carried will be increased by that ammount.">
-        <input name="ownWeight" type="text" data-dType="Number" value="{{ownWeight}}"></dd>
-    <dt title="If checked, the weight of items in this category will not be calculated towards Carrying Capacity.">Ignore Item Weight: </dt>
-    <dd title="If checked, the weight of items in this category will not be calculated towards Carrying Capacity.">
-        <input name="ignoreWeight" type="checkbox" {{#if ignoreWeight}}checked{{/if}}></dd>
+    <div class="form-group">
+        <label>{{localize "SPELL_BETTER.NewCategory.NAME"}}</label>
+        <input type="String" name="categoryLabel" data-dtype="String"/>
+    </div>
+    <div class="form-group">
+        <label>{{localize "SPELL_BETTER.NewCategory.FilterSet.LABEL"}}</label>
+        <select name="filter">
+            {{#select filterSet}}
+                <optgroup label="{{ Levels }}"></optgroup>
+                    <option value="">None</option>
+                    {{#each filters}}
+                        <option value="{{this}}">{{this}}</option>
+                    {{/each}}
+                </optgroup>
+            {{/select}}
+        </select>
+        <p class="notes">{{localize filterSet.hint}}</p>
+    </div>
 
-</dl>
+    <div class="form-group">
+        <label>{{localize "SPELL_BETTER.NewCategory.UseCategory.NAME"}}</label>
+        <input type="checkbox" name="useCategory" {{checked useCategory}} data-dtype="Boolean"/>
+        <p class="notes">{{localize "SPELL_BETTER.NewCategory.UseCategory.HINT"}}</p>
+    </div>
