--- a/templates/parts/actor-spellbook.hbs
+++ b/templates/parts/actor-spellbook.hbs
@@ -87,7 +87,7 @@
         <div class="spell-target">{{localize "DND5E.SpellTarget"}} / {{localize "DND5E.Range"}}</div>
         <div class="spell-school">{{localize "DND5E.SpellSchool"}}</div>
 
-        <div class="spell-controls">
+        <div class="item-controls">
         </div>
     </li>
 
@@ -119,7 +119,7 @@
 
             <hr />
 
-            <div class="spell-controls">
+            <div class="item-controls">
                 {{#if section.canCreate}}
                     <a class="spell-control spell-create" title="{{localize 'DND5E.SpellCreate'}}" data-category="{{@key}}">
                         <i class="fas fa-plus"></i> {{localize "DND5E.Add"}}
@@ -190,7 +190,7 @@
             </li>
             {{else}}
             <li class="item flexrow spellbook-header spellbook-empty">
-                <div class="spell-controls">
+                <div class="item-controls">
                 <a class="spell-control item-create" title="{{localize 'DND5E.SpellCreate'}}" data-type="spell"
                     data-level="{{lvl}}"><i class="fas fa-plus"></i> {{localize "DND5E.SpellAdd"}}</a>
                 </div>
