--- a/templates/categoryDialog.hbs
+++ b/templates/categoryDialog.hbs
@@ -21,11 +21,11 @@
     </div>
 
     <div class="form-group">
-        <label for="useCategory">{{localize "SPELL_BETTER.NewCategory.IncludeInStandard.NAME"}}</label>
+        <label for="useCategory">{{localize "SPELL_BETTER.NewCategory.ShowOnlyInCategory.NAME"}}</label>
         <div class="form-fields">
-            <input type="checkbox" name="includeInStandard" {{checked includeInStandard}} data-dtype="Boolean"/>
+            <input type="checkbox" name="showOnlyInCategory" {{checked showOnlyInCategory}} data-dtype="Boolean"/>
         </div>    
-        <p class="notes">{{{localize "SPELL_BETTER.NewCategory.IncludeInStandard.HINT"}}}</p>
+        <p class="notes">{{{localize "SPELL_BETTER.NewCategory.ShowOnlyInCategory.HINT"}}}</p>
     </div>
 
     <button type="submit" name="submit">
