--- a/templates/categoryDialog.hbs
+++ b/templates/categoryDialog.hbs
@@ -1,4 +1,5 @@
 <form autocomplete="off" onsubmit="event.preventDefault();">
+    <input type="String" name="categoryKey" data-dtype="String" value={{categoryKey}} hidden/>
     <div class="form-group">
         <label for="label">{{localize "SPELL_BETTER.NewCategory.NAME"}}</label>
         <input type="String" name="label" data-dtype="String"/>
