--- a/templates/parts/actor-spellbook.hbs
+++ b/templates/parts/actor-spellbook.hbs
@@ -100,8 +100,9 @@
             {{/if}}
             <h4>{{localize section.label}}</h4>
 
-            <a class="inv-plus-stuff shuffle-up" title={{localize "SPELL_BETTER.MoveCategoryUp"}}><i class="fas fa-chevron-up"></i></a>
-            <a class="inv-plus-stuff shuffle-down" title={{localize "SPELL_BETTER.MoveCategoryDown"}}><i class="fas fa-chevron-down"></i></a>
+            {{#unless isFirst}}<a class="inv-plus-stuff shuffle-up" title={{localize "SPELL_BETTER.MoveCategoryUp"}}><i class="fas fa-chevron-up"></i></a>{{/unless}}
+            {{#unless isLast}}<a class="inv-plus-stuff shuffle-down" title={{localize "SPELL_BETTER.MoveCategoryDown"}}><i class="fas fa-chevron-down"></i></a>{{/unless}}
+            {{#if isCustom}}<a class="inv-plus-stuff customize-category"><i class="fas fa-edit"></i></a>{{/if}}
 
             {{#if section.usesSlots}}
                 <div class="spell-slots">
