--- a/templates/categoryDialog.hbs
+++ b/templates/categoryDialog.hbs
@@ -1,5 +1,5 @@
 <form autocomplete="off" onsubmit="event.preventDefault();">
-    <input type="hidden" name="categoryKey" data-dtype="String" value={{categoryKey}}/>
+    <input type="hidden" name="categoryKey" data-dtype="String" value="{{categoryKey}}"/>
     <div class="form-group">
         <label for="label">{{localize "SPELL_BETTER.NewCategory.NAME"}}</label>
         <input type="String" name="label" value="{{label}}" data-dtype="String"/>
